--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,5 +10,8 @@
 @import './sidebar/main.scss';
 @import './content/main.scss';
 
+// Pages
+@import './pages/login';
+
 // Addons
 @import '~metismenu/src/metisMenu.scss';
