--- a/resources/sass/content/_header-navs.scss
+++ b/resources/sass/content/_header-navs.scss
@@ -9,6 +9,12 @@
             align-items: center;
 
             .userinfo {
+                @include media-breakpoint-up('md') {
+                    padding-left: .5rem;
+                    border-left: 1px solid $gray-200;
+                    margin-left: .5rem;
+                }
+
                 .nav-link {
                     display: flex;
                     align-items: center;
@@ -19,15 +25,18 @@
                     }
 
                     img {
-                        max-height: 30px;
-                        max-width: 30px;
+                        max-height: 35px;
+                        max-width: 35px;
                     }
                 }
             }
         }
 
         .navbar-brand {
-            transition: all .2s;
+            @include media-breakpoint-up("lg") {
+                width: calc(#{$sidebar-width} - 1rem);
+                transition: all .2s;
+            }
 
             .img-full {
                 width: 100%;
@@ -38,11 +47,6 @@
                 width: 100%;
                 padding: .5rem 1.5rem .5rem 0;
                 display: none;
-            }
-
-            @include media-breakpoint-up("lg") {
-                width: calc(#{$sidebar-width} - 1rem);
-                border-right: 1px solid $gray-300;
             }
         }
     }
