--- a/resources/sass/content/content-wrapper.scss
+++ b/resources/sass/content/content-wrapper.scss
@@ -5,9 +5,20 @@ main#main-content {
     margin-top: 1rem;
     padding-right: 15px;
     padding-left: 15px;
+    display: flex;
+    flex-direction: column;
 
     @include media-breakpoint-down('md') {
         width: 100%;
-        margin: 1rem 1rem 0 1rem !important;
+        margin: 0.5rem 0 0 -.25rem;
+    }
+
+    .inner-content {
+        flex: 1;
+    }
+
+    .footer {
+        padding: 1rem 0;
+        margin-top: 1rem;
     }
 }
